# Sign_Language_Translator

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_COMPLETION.md  README.md  Sign_Language_Translator_Colab.ipynb  example_usage.py  pyproject.toml  requirements.txt
sign_language_translator/: README.md
sign_language_translator/scripts/: convert_sign_mnist.py  evaluate.py  export_onnx.py
sign_language_translator/sign_language_translator/: __init__.py  datasets.py  models.py  transforms.py  utils.py
sign_language_translator/sign_language_translator/scripts/: __init__.py  infer.py  train.py
