[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sign-language-translator"
version = "0.1.0"
description = "PyTorch-based Sign Language (ASL) alphabet classifier"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NKEthio"}
]
keywords = ["sign language", "ASL", "computer vision", "deep learning", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24,<2",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "rich>=13.7",
    "albumentations>=1.4",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "hydra-core>=1.3",
    "typer>=0.12",
    "scipy>=1.10",
    "seaborn>=0.12",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/NKEthio/Sign_Language_Translator"
Repository = "https://github.com/NKEthio/Sign_Language_Translator"

[project.scripts]
slt-train = "sign_language_translator.scripts.train:main"
slt-infer = "sign_language_translator.scripts.infer:main"
slt-convert = "sign_language_translator.scripts.convert_sign_mnist:main"

[tool.setuptools]
package-dir = {"" = "sign_language_translator"}

[tool.setuptools.packages.find]
where = ["sign_language_translator"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
